<resources>
    <string name="app_name" translatable="false">MainTrack</string>
    <string name="app_welcome">Bem-vindo à MAINTRACK</string>
    <string name="app_welcome_text">Gerencie, monitore e resolva avarias de forma simples e eficiente.</string>
    <string name="splash_screen_2">Registe Avarias em Segundos</string>
    <string name="splash_screen_2_text">Tire uma foto, descreva o problema e envie tudo pelo app.</string>
    <string name="splash_screen_3">Resolução Rápida  e Colaborativa</string>
    <string name="splash_screen_3_text">Acompanhe o status das avarias e intervenções onde estiver.</string>
    <string name="splash_screen_4">Monitorize Tudo em Tempo Real</string>
    <string name="splash_screen_4_text">Acompanhe o status das avarias e intervenções onde estiver.</string>
    <string name="splash_screen_5">Fique Sempre Atualizado</string>
    <string name="splash_screen_5_text">Receba notificações sobre atualizações e resoluções diretamente no seu celular.</string>
    <string name="Email">Email</string>
    <string name="Palavras_passe">Palavras-passe</string>
    <string name="Registo">Registo</string>
    <string name="login">Iniciar sessão</string>
    <string name="Login_Efetuado">Login Efetuado</string>
    <string name="Login_Erro">Erro no login</string>
    <string name="Nome">Nome</string>
    <string name="Contacto">Contacto</string>
    <string name="Verificação_palavras_passe">Verificação palavras-passe</string>
    <string name="Registo_Efetuado">Registo Efetuado</string>
    <string name="Erro_registo">Erro no registo</string>
    <string name="avancar" translatable="false">avancar</string>
    <string name="nav_registo_avaria">Registo de avarias</string>
    <string name="nav_resolvidas">Avarias resolvidas</string>
    <string name="nav_processo">Avarias em processo</string>
    <string name="nav_pendentes">Avarias pendentes</string>
    <string name="nav_perfil">Perfil</string>
    <string name="nav_logout">Terminar Sessão</string>
    <string name="registo_avaria_titulo">Registo avaria</string>
    <string name="fotografias_label">Fotografias</string>
    <string name="descricao_label">Descrição Detalhada</string>
    <string name="tipo_urgencia_label">Tipo Urgência</string>
    <string name="urgencia_baixa">Baixa</string>
    <string name="urgencia_media">Média</string>
    <string name="urgencia_alta">Alta</string>
    <string name="localizacao_label">Localização</string>
    <string name="botao_submeter">Submeter</string>
    <string name="Configuracoes">Configurações</string>
    <string name="perfil">Perfil</string>
    <string name="mensagens">Mensagens</string>

</resources>